# school

./: .gitignore
grassmannManifold/: CMakeLists.txt
grassmannManifold/src/: main.cpp
markovRandomFields/1_basicImageSegmentation/: CMakeLists.txt  main.cpp
markovRandomFields/1_basicImageSegmentation/inc/: Optimizer.hpp  PatternGenerator.hpp  Segment.hpp
markovRandomFields/1_basicImageSegmentation/src/: Optimizer.cpp  PatternGenerator.cpp
professionalCmake/: CMakeLists.txt
professionalCmake/libs/lib1/: CMakeLists.txt
professionalCmake/libs/lib1/inc/: Words.hpp
professionalCmake/libs/lib1/src/: Words.cpp
professionalCmake/libs/lib2/: CMakeLists.txt
professionalCmake/libs/lib2/inc/: Math.hpp
professionalCmake/libs/lib2/src/: Math.cpp  main.cpp
professionalCpp/: CMakeLists.txt
professionalCpp/10_DiscoveringInheritanceTechniques/: CMakeLists.txt  main.cpp  notes.txt
professionalCpp/11_quirks_oddities_and_incidentals/: AnotherFile.cpp  CMakeLists.txt  main.cpp  notes.txt
professionalCpp/12_Templates/: CMakeLists.txt  main.cpp
professionalCpp/14_HandlingErros/: CMakeLists.txt  main.cpp  notes.txt
professionalCpp/15_OverloadingCppOperators/: CMakeLists.txt  main.cpp  notes.txt
professionalCpp/18_masteringStandardLibraryAlgs/: CMakeLists.txt  main.cpp  notes.md
professionalCpp/19_StringLocalizationRegularExpressions/: CMakeLists.txt  main.cpp  notes.md
professionalCpp/1_crashCourse/: CMakeLists.txt  airplane.cppm  main.cpp
professionalCpp/21_customizingAndExtendingTheStandardLibrary/: CMakeLists.txt  main.cpp  notes.md
professionalCpp/22_AdvancedTemplates/: CMakeLists.txt  main.cpp
professionalCpp/23_MultithreadedProgramming/: CMakeLists.txt  main.cpp  notes.txt
professionalCpp/24_MaximizingSoftwareEngineeringMethods/: CMakeLists.txt
professionalCpp/26_BecomingAdeptAtTesting/: notes.md
professionalCpp/29_ApplyingDesignPatterns/: CMakeLists.txt  main.cpp  notes.md
professionalCpp/29_ApplyingDesignPatterns/inc/: iteratorClass.hpp  proxyClass.hpp
professionalCpp/2_Strings/: CMakeLists.txt  main.cpp
professionalCpp/4_DesigingProfessionalPrograms/: programing_design.txt
professionalCpp/5_DesigningWithObjects/: Objects.txt
professionalCpp/6_DesigningForReuse/: reuse.txt
professionalCpp/7_MemoryManagement/: CMakeLists.txt  main.cpp  notes.txt
professionalCpp/9_MasteringClassesAndObjects/: CMakeLists.txt  main.cpp
professionalCpp/a_bitManipulation/: CMakeLists.txt  main.cpp
professionalCpp20/multithreaded/: CMakeLists.txt  main.cpp
professionalCpp20/newFeatures/: CMakeLists.txt  main.cpp
professionalCpp20/newFeatures/inc/: concepts.hpp
riemannianGeometry/: notes.lyx  notes.lyx~  polarCoordinates.py
slidingWindowFilter/: main.py  robot.py
smoothManifolds/: sphere.lyx  sphere.lyx~
